--- a/css/carta.css
+++ b/css/carta.css
@@ -1,4 +1,14 @@
-.body {
-    background-color: pink;
+body {
+    background-color: snow;
 }
 
+header {
+    background-color: pink;
+    color: white;
+    padding: 3rem 2rem;
+}
+
+header h1 {
+    font-size: 4rem;
+    text-align: center;
+}
