añadiendo las plantillas nuevas

--- a/css/carta.css
+++ b/css/carta.css
@@ -2,13 +2,10 @@ body {
     background-color: snow;
 }
 
-header {
+h1 {
+    font-size: 4rem;
+    text-align: center;
     background-color: pink;
     color: white;
     padding: 3rem 2rem;
-}
-
-header h1 {
-    font-size: 4rem;
-    text-align: center;
 }
