--- a/css/style.css
+++ b/css/style.css
@@ -43,13 +43,16 @@
     display: block;
 }
 
-header {
+/* header {
     background-color: pink;
     color: white;
     padding: 3rem 2rem;
-}
+} */
 
-header h1 {
+h1 {
     font-size: 4rem;
     text-align: center;
+    background-color: pink;
+    color: white;
+    padding: 3rem 2rem;
 }
