--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,5 @@
-.body {
-    background-color: aliceblue;
-}
-
-.dropdown-btn {
-    background-color: blueviolet;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: gainsboro;
-    min-width: 160px;
-    box-shadow: 0px 4px 4px rgba(0.0.0.0.2);
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
-.dropdown:hover .dropdown-btn {
-    background-color: darkorchid;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
+body {
+    background-color: snow;
 }
 
 /* header {
