--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,4 +1,14 @@
-.body {
+body {
     background-color: snow;
 }
 
+.form {
+    padding: 0;
+    margin: 0;
+
+}
+
+footer {
+    padding: 0;
+    margin: 0;
+}
