--- a/css/contacto.css
+++ b/css/contacto.css
@@ -59,3 +59,27 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #ffc4f0;
 }
+
+footer {
+    background-color: #ffecf9;
+    padding: 3rem;
+    color: black;
+}
+
+footer section {
+    float: right;
+}
+
+footer p {
+    margin: 0;
+}
+
+footer a {
+    transition: color 0.3s ease;
+    color: black;
+    text-decoration: none;
+}
+
+footer a:hover{
+    color: cornflowerblue;
+}
