--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,3 +1,27 @@
 .body {
     background-color: snow;
 }
+
+footer {
+    background-color: #ffecf9;
+    padding: 3rem;
+    color: black;
+}
+
+footer section {
+    float: right;
+}
+
+footer p {
+    margin: 0;
+}
+
+footer a {
+    transition: color 0.3s ease;
+    color: black;
+    text-decoration: none;
+}
+
+footer a:hover{
+    color: cornflowerblue;
+}
