--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,27 @@ h1 {
     color: white;
     padding: 3rem 2rem;
 }
+
+footer {
+    background-color: #ffecf9;
+    padding: 3rem;
+    color: black;
+}
+
+footer section {
+    float: right;
+}
+
+footer p {
+    margin: 0;
+}
+
+footer a {
+    transition: color 0.3s ease;
+    color: black;
+    text-decoration: none;
+}
+
+footer a:hover{
+    color: cornflowerblue;
+}
