--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,5 +1,13 @@
-.body {
+body {
     background-color: snow;
+}
+
+h1 {
+    font-size: 4rem;
+    text-align: center;
+    background-color: pink;
+    color: white;
+    padding: 3rem 2rem;
 }
 
 footer {
