intento de cambiar el color del dropdow sin exito

--- a/css/carta.css
+++ b/css/carta.css
@@ -19,6 +19,10 @@ h1 {
     padding: 3rem 2rem;
 }
 
+.bg-danger-subtle {
+    background-color: pink;
+}
+
 .card {
     background-color: rgb(255, 225, 244);
 }
