--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@ body {
     background-color: snow;
 }
 
+.allura-regular {
+    font-family: "Allura", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+
 h1 {
     font-size: 4rem;
     text-align: center;
