arreglando footer y font en algunos html

--- a/css/carta.css
+++ b/css/carta.css
@@ -23,12 +23,25 @@ h1 {
     background-color: pink;
 }
 
+h2 {
+    font-family: "Allura", cursive;
+}
+
 .card {
     background-color: rgb(255, 225, 244);
 }
 
+.card-text{
+    font-family: "Allura", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+
 .boton {
     background-color: pink;
+    border: 0px;
+    color: black;
+    padding: 5px
 }
 
 
