--- a/css/carta.css
+++ b/css/carta.css
@@ -3,11 +3,14 @@ body {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 10rem;
     text-align: center;
-    background-color: pink;
-    color: white;
+    background-color: #ffecf9;
+    color: black;
     padding: 3rem 2rem;
+    font-family: "Allura", cursive;
+    font-weight: 400;
+    font-style: normal
 }
 
 
