--- a/css/contacto.css
+++ b/css/contacto.css
@@ -14,11 +14,14 @@ body {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 10rem;
     text-align: center;
-    background-color: pink;
-    color: white;
+    background-color: #ffecf9;
+    color: black;
     padding: 3rem 2rem;
+    font-family: "Allura", cursive;
+    font-weight: 400;
+    font-style: normal
 }
 
 h2 {
@@ -58,6 +61,11 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background-color: #ffc4f0;
+}
+
+p {
+    text-align: center;
+    font-family: "Allura", cursive;
 }
 
 footer {
