--- a/css/style.css
+++ b/css/style.css
@@ -2,24 +2,31 @@ body {
     background-color: snow;
 }
 
-
-h5 {
+.card-body {
     font-family: "Allura", cursive;
     font-weight: 400;
     font-style: normal;
 }
+
 .card-text {
     font-family: "Allura", cursive;
     font-weight: 400;
     font-style: normal;
 }
 
+img {
+    width: 25rem;
+}
+
 h1 {
-    font-size: 4rem;
+    font-size: 10rem;
     text-align: center;
-    background-color: pink;
-    color: white;
+    background-color: #ffecf9;
+    color: black;
     padding: 3rem 2rem;
+    font-family: "Allura", cursive;
+    font-weight: 400;
+    font-style: normal
 }
 
 footer {
