retocando el agradecimiento del contact

--- a/css/contacto.css
+++ b/css/contacto.css
@@ -63,7 +63,7 @@ input[type="submit"]:hover {
     background-color: #ffc4f0;
 }
 
-p {
+.gracias {
     text-align: center;
     font-family: "Allura", cursive;
 }
