--- a/css/contacto.css
+++ b/css/contacto.css
@@ -13,15 +13,15 @@ body {
     border-radius: 5px;
 }
 
-h1 {
-    font-size: 10rem;
+#titulo {
+    font-size: 5rem;
     text-align: center;
-    background-color: #ffecf9;
+    background-color: rgb(255, 225, 244);
     color: black;
     padding: 3rem 2rem;
     font-family: "Allura", cursive;
     font-weight: 400;
-    font-style: normal
+    font-style: normal;
 }
 
 h2 {
@@ -57,6 +57,7 @@ input[type="submit"] {
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 5px;
+    text-align: center;
 }
 
 input[type="submit"]:hover {
@@ -69,7 +70,7 @@ input[type="submit"]:hover {
 }
 
 footer {
-    background-color: #ffecf9;
+    background-color:  rgb(255, 225, 244);
     padding: 3rem;
     color: black;
 }
