--- a/css/carta.css
+++ b/css/carta.css
@@ -17,7 +17,6 @@ h1 {
     font-style: normal
 }
 
-
 #titulo {
     font-size: 5rem;
     text-align: center;
@@ -27,10 +26,6 @@ h1 {
     font-family: "Allura", cursive;
     font-weight: 400;
     font-style: normal
-}
-
-.bg-danger-subtle {
-    background-color: pink;
 }
 
 h2 {
@@ -60,8 +55,9 @@ h2 {
     border: 0rem;
     color: black;
     padding: 0.313rem;
+    border-radius: 0.563rem;
+    box-shadow: 0px 0px 2px 2px rgb(105, 58, 94);
 }
-
 
 footer {
     background-color: rgb(255, 225, 244);
