--- a/css/carta.css
+++ b/css/carta.css
@@ -1,11 +1,9 @@
 body {
     background-color: snow;
 }
-
 .custom-header {
-    background-color: rgb(253, 191, 230); 
+    background-color: rgb(255, 225, 244)!important; 
 }
-
 h1 {
     font-size: 10rem;
     text-align: center;
@@ -17,6 +15,7 @@ h1 {
     font-style: normal
 }
 
+
 #titulo {
     font-size: 5rem;
     text-align: center;
@@ -26,6 +25,10 @@ h1 {
     font-family: "Allura", cursive;
     font-weight: 400;
     font-style: normal
+}
+
+.bg-danger-subtle {
+    background-color: pink;
 }
 
 h2 {
@@ -48,15 +51,17 @@ h2 {
     font-family: "Allura", cursive;
     font-weight: 400;
     font-style: normal;
+    padding: 3% 1%;
 }
-
+.boton-padding{
+    padding: 2% 2%;
+}
 .boton {
     background-color: rgb(255, 104, 212);
-    border: 0rem;
-    color: black;
-    padding: 0.313rem;
-    border-radius: 0.563rem;
+    border-radius:10px;
     box-shadow: 0px 0px 2px 2px rgb(105, 58, 94);
+    border: 0px;
+    color: black; 
 }
 
 footer {
