--- a/css/carta.css
+++ b/css/carta.css
@@ -53,6 +53,13 @@ h2 {
     font-style: normal;
     padding: 3% 1%;
 }
+
+img {
+    width: 10rem;
+    height: 20rem;
+}
+
+
 .boton-padding{
     padding: 2% 2%;
 }
