--- a/css/style.css
+++ b/css/style.css
@@ -2,30 +2,28 @@ body {
     background-color: snow;
     padding: 0;
     margin: 0;
+    overflow-x: hidden; /* Evita el desplazamiento horizontal */
 }
 
 .custom-header {
     background-color: rgb(253, 191, 230);
 }
 
-.card-body {
-    font-family: "Allura", cursive;
-    font-weight: 400;
-    font-style: normal;
-}
-
 .card-text {
     font-family: "Allura", cursive;
     font-weight: 400;
     font-style: normal;
+    padding: 3% 1%;
+    text-align: center;
 }
 
 .card img {
-    width: 55rem;
+    max-width: 40%; /* Para asegurar que la imagen se ajuste al contenedor */
+    height: 30rem;
+    width: 50rem; /* Para mantener la relación de aspecto */
     display: block;
-    margin-left: auto;
+    margin: auto;
 }
-
 
 #titulo {
     font-size: 5rem;
@@ -35,7 +33,7 @@ body {
     padding: 3rem 2rem;
     font-family: "Allura", cursive;
     font-weight: 400;
-    font-style: normal
+    font-style: normal;
 }
 
 
